# deepchecks-albert

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
app/: entrypoint.sh  pyproject.toml  worker-entrypoint.sh
app/app/: celery.py  settings.py  urls.py
app/core/: apps.py  enums.py  health.py  urls.py
app/interactions/: apps.py  choices.py  models.py  serializers.py  tasks.py  urls.py  views.py
app/interactions/migrations/: 0001_initial.py  0002_llmfile.py  0003_alert_input_alert_alert_output_alert_and_more.py  0004_alter_llminteraction_input_metric_and_more.py
app/templates/: _navbar.html  base.html
app/templates/core/: index.html
conf/docker/: apt-packages.txt  setup.sh
conf/local/: nginx.conf.template
pip/: requirements.dev.txt  requirements.txt
scripts/: secrets.sh
